# Surrogate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fit_surrogate.py  gaussian_1D.py  gaussian_mixture_2D copy.py  mkdocs.yml  pretrain.py  pyproject.toml  requirements.txt  run_pretraining.py  run_server.py  run_testclient.py  run_visualization.py  server.py  settings.py  surrogate.py  test_client.py  testclient.py
.github/workflows/: docs.yaml
docs/: index.md
docs/api/: offline_training.md  surrogate_control.md  surrogate_model.md  test_client.md  utilities.md  visualization.md
docs/usage/: tutorial.md
examples/: run_all_examples.py  run_pretraining.py  run_server.py  run_testclient.py  run_visualization.py
examples/example_01/: settings.py  simulation_model.py
examples/example_02/: settings.py  simulation_model.py
examples/example_03/: settings.py  simulation_model.py
examples/gauss_1D/: settings.py  settings_control.py  settings_pretraining.py  settings_testclient.py  simulation_model.py
examples/gauss_2D/: settings.py  settings_control.py  settings_pretraining.py  settings_testclient.py
examples/gauss_6D/: settings.py  simulation_model.py
models/: gaussian_1D.py
seissol/sebastian/: settings_control.py  settings_pretraining.py  settings_testclient.py
seissol/zihua/: settings.py  settings_control.py  settings_pretraining.py  settings_testclient.py
seissol/zihua_2D/: settings.py  settings_control.py  settings_fit.py  settings_pretraining.py  settings_testclient.py  simulation_model.py
seissol/zihua_5D/: settings.py  settings_fit.py
src/surrogate/: offline_training.py  surrogate_control.py  surrogate_model.py  test_client.py  utilities.py  visualization.py
src/surrogate/depr/: surrogate.py
surrogate/: surrogate_control.py  surrogate_model.py
