[project]
name = "surrogate"
version = "1.0.0"
description = "Umbridge service for a greedy, asynchronous surrogate model"
readme = "README.md"
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
    {name = "Linus Seelinger", email = "linus.seelinger@kit.edu"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "umbridge>=1.2.4",
]

[project.optional-dependencies]
development = [
    "ruff>=0.8.2",
]
notebook = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
]
postprocessing = [
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM101", "EM102", "TRY003", "COM812", "RET504", "S101", "PD008"]
pydocstyle.convention = "google"
